--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -10,37 +10,32 @@
 
 
 .section-calculador {
-    width: 50%;
-    height: 500px;
+    width: 60%;
+    height: 600px;
     margin:100px auto;
     display: grid;
     grid-template-columns: auto auto auto  auto;
     grid-template-rows: auto auto auto auto auto;
-    gap: 10px;
-    padding: 10px;
+    border: solid;
+    
+    
     
 }
 
 .section-calculador div {
+    font-size: 40px;
     text-align: center;
-    font-weight: bolder;
     background-color: white;
-    width: 50px;
-    height: 50px;
-    border-radius: 20px;
-    border: solid 2px;
+    font-weight: bolder;
+    border: solid;
 }
 #item-1{
     grid-column: 1 / 4;
-    width: 600px;
-    height: 100px;
+   
 }
-
-
-.item-6{
-    grid-row: 2 / 5;
-    
-    width: 500px;
-    height: 100px;
-    color: brown;
+#item-3{
+    border: none;
+}
+.section-calculador  div + div {
+    border-left: solid;
 }
